# sdk-python

./: CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.py
src/shoppexio/: __init__.py  client.py  errors.py  models.py
tests/: test_client.py
