[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shoppexio"
version = "0.1.0"
description = "Official Python SDK for the Shoppex Developer API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "Shoppex" }
]
keywords = ["shoppex", "sdk", "python", "developer-api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0"
]

[project.urls]
Homepage = "https://docs.shoppex.io/api-reference/sdks"
Documentation = "https://docs.shoppex.io/api-reference/introduction"
Source = "https://github.com/ShoppexIO/sdk-python"
Issues = "https://github.com/ShoppexIO/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shoppexio"]

[tool.hatch.build.targets.sdist]
include = [
  "src/shoppexio",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "examples",
]
